# OPALX

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Doxyfile.in  README.md
src/: BuildInfo.h.in  CMakeLists.txt  GSLErrorHandling.h  Main.cpp  OPALTypes.h  OPALXVersions.h.in  OPALconfig.h  VectorMath.h  addToDoxygenMainPage.h  changes.cpp  changes.h  config.h.in
src/AbsBeamline/: AttributeSet.cpp  AttributeSet.h  BeamlineVisitor.cpp  BeamlineVisitor.h  BendBase.cpp  BendBase.h  CMakeLists.txt  Component.cpp  Component.h  ConstantEFieldCavity.cpp  ConstantEFieldCavity.h  ConstantEz.cpp  ConstantEz.h  Corrector.cpp  Corrector.h  Drift.cpp  Drift.h  ElementBase.cpp  ElementBase.h  Laser.cpp  Laser.h  Marker.cpp  Marker.h  Monitor.cpp  Monitor.h  Multipole.cpp  Multipole.h  MultipoleT.cpp  MultipoleT.h  MultipoleTBase.cpp  MultipoleTBase.h  MultipoleTConfig.h  MultipoleTCurvedConstRadius.cpp  MultipoleTCurvedConstRadius.h  MultipoleTCurvedVarRadius.cpp  MultipoleTCurvedVarRadius.h  MultipoleTStraight.cpp  MultipoleTStraight.h  Offset.cpp  Offset.h  (+23 more)
src/AbstractObjects/: Action.cpp  Action.h  Attribute.cpp  Attribute.h  AttributeBase.cpp  AttributeBase.h  AttributeHandler.cpp  AttributeHandler.h  BeamSequence.cpp  BeamSequence.h  CMakeLists.txt  Definition.cpp  Definition.h  Directory.cpp  Directory.h  Element.cpp  Element.h  Expressions.h  Invalidator.cpp  Invalidator.h  Object.cpp  Object.h  ObjectFunction.cpp  ObjectFunction.h  OpalData.cpp  OpalData.h  OpalParticle.cpp  OpalParticle.h  PlaceRep.cpp  PlaceRep.h  RangeRep.cpp  RangeRep.h  Table.cpp  Table.h  TableRowRep.cpp  TableRowRep.h  ValueDefinition.cpp  ValueDefinition.h
src/Algorithms/: AbstractTimeDependence.cpp  AbstractTimeDependence.h  AbstractTracker.cpp  AbstractTracker.h  BoostMatrix.h  CMakeLists.txt  CavityAutophaser.cpp  CavityAutophaser.h  CoordinateSystemTrafo.cpp  CoordinateSystemTrafo.h  DefaultVisitor.cpp  DefaultVisitor.h  DistributionMoments.cpp  DistributionMoments.h  Flagger.cpp  Flagger.h  IndexMap.cpp  IndexMap.h  Matrix.h  OpalMatrix.h  OpalParticle.cpp  OpalParticle.h  OrbitThreader.cpp  OrbitThreader.h  PBunchDefs.h  ParallelTracker.cpp  ParallelTracker.h  PartBins.h  PartData.cpp  PartData.h  PolynomialTimeDependence.cpp  PolynomialTimeDependence.h  Quaternion.cpp  Quaternion.hpp  ReferencePathModel.h  ReferencePathSegment.h  SinusoidalTimeDependence.cpp  SinusoidalTimeDependence.h  SplineTimeDependence.cpp  SplineTimeDependence.h  (+4 more)
src/Attributes/: Attributes.cpp  Attributes.h  Bool.cpp  Bool.h  BoolArray.cpp  BoolArray.h  CMakeLists.txt  OpalString.cpp  OpalString.h  Place.cpp  Place.h  PredefinedString.cpp  PredefinedString.h  Range.cpp  Range.h  Real.cpp  Real.h  RealArray.cpp  RealArray.h  Reference.cpp  Reference.h  StringArray.cpp  StringArray.h  TableRow.cpp  TableRow.h  TokenList.cpp  TokenList.h  TokenListArray.cpp  TokenListArray.h  UpperCaseString.cpp  UpperCaseString.h  UpperCaseStringArray.cpp  UpperCaseStringArray.h
src/BasicActions/: CMakeLists.txt  Call.cpp  Call.h  DumpEMFields.cpp  DumpEMFields.h  DumpFields.cpp  DumpFields.h  Echo.cpp  Echo.h  Help.cpp  Help.h  Option.cpp  Option.h  PSystem.cpp  PSystem.h  Quit.cpp  Quit.h  Select.cpp  Select.h  Stop.cpp  Stop.h  System.cpp  System.h  Title.cpp  Title.h  Value.cpp  Value.h
src/BeamlineCore/: CMakeLists.txt  ConstantEFieldCavityRep.cpp  ConstantEFieldCavityRep.h  ConstantEzRep.cpp  ConstantEzRep.h  DriftRep.cpp  DriftRep.h  LaserRep.cpp  LaserRep.h  MarkerRep.cpp  MarkerRep.h  MonitorRep.cpp  MonitorRep.h  MultipoleRep.cpp  MultipoleRep.h  ProbeRep.cpp  ProbeRep.h  RBendRep.cpp  RBendRep.h  RFCavityRep.cpp  RFCavityRep.h  SBendRep.cpp  SBendRep.h  SolenoidRep.cpp  SolenoidRep.h  TravelingWaveRep.cpp  TravelingWaveRep.h
src/BeamlineGeometry/: CMakeLists.txt  ElementGeometry.h  Euclid3D.cpp  Euclid3D.h  Euclid3DGeometry.cpp  Euclid3DGeometry.h  Geometry.cpp  Geometry.h  Matrix3D.cpp  Matrix3D.h  Misalignment.h  NullGeometry.cpp  NullGeometry.h  PlacedElement.h  PlacementPose.h  PlanarArcGeometry.cpp  PlanarArcGeometry.h  Port.h  RBendGeometry.cpp  RBendGeometry.h  Rotation3D.cpp  Rotation3D.h  StraightGeometry.cpp  StraightGeometry.h  SupportPlacement.h  VarRadiusGeometry.cpp  VarRadiusGeometry.h  Vector3D.cpp  Vector3D.h
src/Beamlines/: Beamline.cpp  Beamline.h  BeamlineGeometry.cpp  BeamlineGeometry.h  CMakeLists.txt  ElmPtr.cpp  ElmPtr.h  FlaggedBeamline.cpp  FlaggedBeamline.h  FlaggedElmPtr.cpp  FlaggedElmPtr.h  TBeamline.h
src/Channels/: CMakeLists.txt  Channel.cpp  Channel.h  ConstChannel.cpp  ConstChannel.h  DirectChannel.h  IndexedChannel.h  IndirectChannel.h
src/Distribution/: CMakeLists.txt  Distribution.cpp  Distribution.h  EmittedFromFile.cpp  EmittedFromFile.h  FlatTop.cpp  FlatTop.h  FromFile.cpp  FromFile.h  Gaussian.cpp  Gaussian.h  LaserProfile.cpp  LaserProfile.h  MultiVariateGaussian.cpp  MultiVariateGaussian.h  OpalFlatTop.cpp  OpalFlatTop.h  SamplingBase.cpp  SamplingBase.hpp
src/Elements/: CMakeLists.txt  OpalBeamline.cpp  OpalBeamline.h  OpalBend.cpp  OpalBend.h  OpalCavity.cpp  OpalCavity.h  OpalConstantEFieldCavity.cpp  OpalConstantEFieldCavity.h  OpalConstantEz.cpp  OpalConstantEz.h  OpalDrift.cpp  OpalDrift.h  OpalElement.cpp  OpalElement.h  OpalLaser.cpp  OpalLaser.h  OpalMarker.cpp  OpalMarker.h  OpalMonitor.cpp  OpalMonitor.h  OpalMultipole.cpp  OpalMultipole.h  OpalMultipoleT.cpp  OpalMultipoleT.h  OpalPolynomialTimeDependence.cpp  OpalPolynomialTimeDependence.h  OpalProbe.cpp  OpalProbe.h  OpalQuadrupole.cpp  OpalQuadrupole.h  OpalRBend.cpp  OpalRBend.h  OpalRingDefinition.cpp  OpalRingDefinition.h  OpalSBend.cpp  OpalSBend.h  OpalSinusoidalTimeDependence.cpp  OpalSinusoidalTimeDependence.h  OpalSolenoid.cpp  (+12 more)
src/Expressions/: AAutomatic.h  ABinary.h  AColumn.cpp  AColumn.h  ADeferred.h  AList.h  ARefExpr.h  ARow.cpp  ARow.h  ASUnary.h  ATable.cpp  ATable.h  AUnary.h  AValue.h  CMakeLists.txt  Expressions.cpp  Expressions.h  Indexer.h  SAutomatic.h  SBinary.h  SCell.cpp  SCell.h  SConstant.h  SDeferred.h  SFunction.cpp  (+12 more)
tests/: CMakeLists.txt
unit_tests/: CMakeLists.txt
(+602 files in other folders)
