set (_SRCS
    AColumn.cpp
    ARow.cpp
    ATable.cpp
    Expressions.cpp
    SCell.cpp
    SFunction.cpp
    SHash.cpp
    )

set (HDRS
    AAutomatic.h
    ABinary.h
    AColumn.h
    ADeferred.h
    AList.h
    ARefExpr.h
    ARow.h
    ASUnary.h
    ATable.h
    AUnary.h
    AValue.h
    Expressions.h
    Indexer.h
    SAutomatic.h
    SBinary.h
    SCell.h
    SConstant.h
    SDeferred.h
    SFunction.h
    SHash.h
    SNull.h
    SRefAttr.h
    SRefExpr.h
    SUnary.h
    SValue.h
    TFind.h
    TFunction0.h
    TFunction1.h
    TFunction2.h
    )

target_include_directories(opalx PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

target_sources(opalx PRIVATE ${_SRCS})

install (FILES ${HDRS} DESTINATION "${CMAKE_INSTALL_PREFIX}/include/Expressions")